# EmbeddedCourse

./: CMakeLists.txt  build.sh  command.txt  dataset.cpp  dataset.h  main.cpp  model.cpp  model.h  trainer.cpp  trainer.h
